--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         flex: 0 1 12em;
         order: -1;
         font-size: 18px;
+        min-width: 12em;
     }
     header {
         display: flex;
@@ -84,6 +85,7 @@
         flex-wrap: wrap;
         padding: 10px;
         border: 1px solid #2972e7;
+        margin: 10px 10px 15px 10px;
     }
     .grid-cell {
         display: flex;
@@ -157,10 +159,41 @@
                             1/2
                         </div>
                     </div>
+                    <div class="grid-container">
+                        <div class="grid-cell">
+                            1/3
+                        </div>
+                        <div class="grid-cell">
+                            1/3
+                        </div>
+                        <div class="grid-cell">
+                            1/3
+                        </div>
+                    </div>
+                    <h3>Html</h3>
+                    <p>If you want to divide in equal parts just keep adding the div with the flex-child class inside the container</p>
+                    <p>Ex: If you want to divide in 2 sections just add inside the container 2 div's with flex-child class</p>
                     <pre class="code-section">
-                        &lt;div class="" >
-
+                        &lt;div class="container">
+                            &lt;div class="flex-child">
+                                    // 1st Div
+                                    // Write your Code here
+                            &lt;/div>
+                            &lt;div class="flex-child">
+                                // 2nd Div
+                                // Write your Code here
+                            &lt;/div >
                         &lt;/div >
+                    </pre>
+                    <h3>Css</h3>
+                    <pre class="code-section">
+                        .container {
+                            display: flex;
+                        }
+
+                        .flex-child {
+                            flex: 1;
+                        }
                     </pre>
                 </div>
             </main>
