--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
         margin: 10px 10px 15px 10px;
     }
     .grid-cell {
-        display: flex;
-        justify-content: center;
+        text-align: center;
         flex: 1;
         margin: 0 10px;
         padding: 10px;
@@ -150,24 +149,50 @@
                 <div id="layout">
                     <h2>Layout's</h2>
                     <h3>Basic Grids</h3>
+                    <h4>Example 1:</h4>
                     <p>The grid cells below do not specify any widths, they just naturally space themselves equally and expand to fit the entire row. They’re also equal height by default.</p>
                     <div class="grid-container">
                         <div class="grid-cell">
-                            1/2
+                            <p>
+                                1/2
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
+                                ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
+                            </p>
                         </div>
                         <div class="grid-cell">
-                            1/2
+                            <p>
+                                1/2
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
+                                ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
+                            </p>
                         </div>
                     </div>
                     <div class="grid-container">
                         <div class="grid-cell">
-                            1/3
+                            <p>
+                                1/3
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
+                                ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
+                            </p>
                         </div>
                         <div class="grid-cell">
-                            1/3
+                            <p>
+                                1/3
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
+                                ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
+                            </p>
                         </div>
                         <div class="grid-cell">
-                            1/3
+                            <p>
+                                1/3
+                            </p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
+                                ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
+                            </p>
                         </div>
                     </div>
                     <h3>Html</h3>
