--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     .container {
         display: flex;
         font-size: 16px;
-        flex: 1;
         padding: 0px 30px 0 15px;
     }
     .nav-container {
@@ -51,7 +50,6 @@
         background-color: ghostwhite;
     }
     .content {
-        flex: 1;
         margin-left: 10px;
     }
     .nav-items {
@@ -82,19 +80,18 @@
     }
     .grid-container {
         display: flex;
-        flex-wrap: wrap;
         padding: 10px;
         border: 1px solid #2972e7;
         margin: 10px 10px 15px 10px;
     }
     .grid-cell {
         text-align: center;
-        margin: 0 10px;
+        margin: 10px;
         padding: 10px;
         background: hsla(31,15%,50%,.1);
     }
 
-    .flex-child {
+    .flex-child, .responsive-flex-child {
         flex: 1;
     }
 
@@ -102,12 +99,26 @@
         flex: 0 0 50%;
     }
 
-    .fixed-third-child {
-        flex: 0 0 33%;
+    .fixed-pixel-child {
+        flex: 0 0 100px;
     }
 
     .flex-child3 {
         flex: 3;
+    }
+
+    .content-comments {
+        color: #ccc;
+    }
+
+    .wrap {
+        flex-wrap: wrap;
+    }
+
+    @media only screen and (max-width: 950px) {
+        .responsive-flex-child {
+            flex: 0 1 100%;
+        }
     }
 
     </style>
@@ -167,8 +178,8 @@
 
                     <!-- Example 1 -->
 
-                    <h4>Example 1:</h4>
-                    <p>The grid cells below do not specify any widths, they just naturally space themselves equally and expand to fit the entire row. They’re also equal height by default.</p>
+                    <h4>Example 1: Basic Grids</h4>
+                    <p>The grid cells below do not specify any widths, they just naturally space themselves equally and expand to fit the entire row.</p>
                     <div class="grid-container">
                         <div class="grid-cell flex-child">
                             <p>
@@ -219,8 +230,8 @@
                     <pre class="code-section">
                         &lt;div class="container">
                             &lt;div class="flex-child">
-                                    // 1st Div
-                                    // Write your Code here
+                                // 1st Div
+                                // Write your Code here
                             &lt;/div>
                             &lt;div class="flex-child">
                                 // 2nd Div
@@ -242,7 +253,7 @@
 
                     <!-- Example 2 -->
 
-                    <h4>Example 2:</h4>
+                    <h4>Example 2: Individual Sizing</h4>
                     <p>
                         If you want that some div's have a fixed width and others to distribute space, just control this with flex property on the child divs.
                     </p>
@@ -258,10 +269,11 @@
                     <p>
                         <b>Note:</b> This flex:3 above don't mean the triple. <a href="#how-flex-grow-works">Check how flex-grow works</a>
                     </p>
+                    <p>(Resize browser)</p>
                     <div class="grid-container">
                         <div class="grid-cell fixed-half-child">
                             <p>
-                                1/2 Fixed
+                                50% (Fixed)
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
                                 ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
@@ -286,9 +298,9 @@
                     </div>
 
                     <div class="grid-container">
-                        <div class="grid-cell fixed-third-child">
+                        <div class="grid-cell fixed-pixel-child">
                             <p>
-                                1/3 Fixed
+                                100px (Fixed)
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
                                 ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
@@ -296,7 +308,7 @@
                         </div>
                         <div class="grid-cell flex-child3">
                             <p>
-                                flex: 3
+                                flex: 3 (auto)
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
                                 ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
@@ -304,7 +316,7 @@
                         </div>
                         <div class="grid-cell flex-child">
                             <p>
-                                flex: 1
+                                flex: 1 (auto)
                             </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, repellendus, nobis hic molestias eveniet perferendis nes
                                 ciunt voluptate ipsum impedit quo a veritatis porro qui commodi expedita? Nostrum enim sed ab.
@@ -313,16 +325,19 @@
                     </div>
 
                     <h3>Html</h3>
-                    <p>If you want to divide in equal parts just keep adding the div with the flex-child class inside the container</p>
-                    <p>Ex: If you want to divide in 2 sections just add inside the container 2 div's with flex-child class</p>
+                    <p>Code for 1st container</p>
                     <pre class="code-section">
                         &lt;div class="container">
-                            &lt;div class="flex-child">
-                                    // 1st Div
-                                    // Write your Code here
+                            &lt;div class="fixed-flex-child">
+                                // Fixed Div
+                                // Write your Code here
                             &lt;/div>
                             &lt;div class="flex-child">
-                                // 2nd Div
+                                // auto
+                                // Write your Code here
+                            &lt;/div >
+                            &lt;div class="flex-child">
+                                // auto
                                 // Write your Code here
                             &lt;/div >
                         &lt;/div >
@@ -333,8 +348,80 @@
                             display: flex;
                         }
 
+                        .fixed-flex-child {
+                            flex: 0 0 50%;
+                        }
+
                         .flex-child {
                             flex: 1;
+                        }
+                    </pre>
+
+                    <!-- Example 3 -->
+
+                    <h4>Example 3: Responsive</h4>
+                    <p>The cells below should be full width by default and scaled to fit above some value (This example 950px)</p>
+                    <p>To achieve this just use flex-wrap on the parent container and with media queries combined with flex property</p>
+                    <p>(Resize your browser to see them in action)</p>
+
+                    <div class="grid-container wrap">
+                        <div class="grid-cell responsive-flex-child">
+                            <p>
+                                1/2 or Full
+                            </p>
+                        </div>
+                        <div class="grid-cell responsive-flex-child">
+                            <p>
+                                1/2 or Full
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="grid-container wrap">
+                        <div class="grid-cell responsive-flex-child">
+                            <p>
+                                1/3 or Full
+                            </p>
+                        </div>
+                        <div class="grid-cell responsive-flex-child">
+                            <p>
+                                1/3 or Full
+                            </p>
+                        </div>
+                        <div class="grid-cell responsive-flex-child">
+                            <p>
+                                1/3 or Full
+                            </p>
+                        </div>
+                    </div>
+
+                    <h3>Html</h3>
+                    <p>Code for 1st container</p>
+                    <pre class="code-section">
+                        &lt;div class="container">
+                            &lt;div class="flex-child">
+                                // Write your Code here
+                            &lt;/div>
+                            &lt;div class="flex-child">
+                                // Write your Code here
+                            &lt;/div >
+                        &lt;/div >
+                    </pre>
+                    <h3>Css</h3>
+                    <pre class="code-section">
+                        .container {
+                            display: flex;
+                            flex-wrap : wrap;
+                        }
+
+                        .flex-child {
+                            flex: 1;
+                        }
+
+                        @media only screen and (max-width: 950px) {
+                            .flex-child {
+                                flex: 0 1 100%;
+                            }
                         }
                     </pre>
 
@@ -347,6 +434,7 @@
                 <div class="nav-container">
                     <a href="#how-to-basis" class="nav-items">How to Flexbox - Basics</a>
                     <a href="#layout" class="nav-items">Layout's</a>
+                    <p>--Adittional info--</p>
                     <a href="#how-flex-grow-works" class="nav-items">How flex-grow/shrink</a>
                 </div>
             </nav>
