change order and title

--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
                         <li><b>align-self:</b> This allows the default alignment (or the one specified by align-items) to be overridden for individual flex items.</li>
                     </ul>
                 </div>
-                <div id="layout">
-                    <h2>Layout's</h2>
-                    <h3>Basic Grids</h3>
+                <div id="basic-grids">
+                    <h2>Basic Grids</h2>
 
                     <!-- Example 1 -->
 
@@ -426,6 +425,9 @@
                     </pre>
 
                 </div>
+                <div id="layout">
+                    <h2>Layout's</h2>
+                </div>
                 <div id="how-flex-grow-works">
                     <h2>How flex-grow and flex-shrink really works?</h2>
                 </div>
@@ -433,6 +435,7 @@
             <nav>
                 <div class="nav-container">
                     <a href="#how-to-basis" class="nav-items">How to Flexbox - Basics</a>
+                    <a href="#basic-grids" class="nav-items">Basic grids</a>
                     <a href="#layout" class="nav-items">Layout's</a>
                     <p>--Adittional info--</p>
                     <a href="#how-flex-grow-works" class="nav-items">How flex-grow/shrink</a>
