--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
                     <h2>How flex-grow and flex-shrink really works?</h2>
                     <h3>Flex-grow/Flex-shrink</h3>
                     <p>A flex container distributes free space to its items (proportionally to their flex grow factor) to fill the containers, or shrinks them (proportionally to their flex shrink factor) to prevent overflow.</p>
-                    <img src="sections.png" />
-                    <img src="growfactors.png"/>
-                    <img src="finalresultgrow.png"/>
+                    <img src="images/sections.png" />
+                    <img src="images/growfactors.png"/>
+                    <img src="images/finalresultgrow.png"/>
                     <h3>Example for flex-grow, flex-shrink works with the same principle</h3>
                     <p> Was applied <b>flex-grow:2</b> on the <b>Section</b> div and <b>flex-grow:1</b> on the <b>Aside</b> div</p>
                     <h3>Calculations</h3>
