--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
                     <h4>Example 3: Responsive</h4>
                     <p>The cells below should be full width by default and scaled to fit above some value (This example 1000px)</p>
-                    <p>To achieve this just use flex-wrap on the parent container and with media queries combined with flex property</p>
+                    <p>To achieve this just use flex-wrap on the parent container and with media queries combined with flex-basis property</p>
                     <p>(Resize your browser to see them in action)</p>
 
                     <div class="grid-container wrap">
@@ -419,7 +419,7 @@
 
                         @media only screen and (max-width: 1000px) {
                             .flex-child {
-                                flex: 0 1 100%;
+                                flex-basis: 100%;
                             }
                         }
                     </pre>
