--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                         }
 
                         .flex-child {
-                            flex: 1;
+                            flex-grow: 1;
                         }
 
                         @media only screen and (max-width: 1000px) {
